--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,16 @@
-<h1>Home page</h1>
+<div class="mt-5">
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            {{#each courses}}
+                <div class="card">
+                    <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.name}}</h5>
+                        <p class="card-text">{{this.description}}</p>
+                        <a href="#" class="btn btn-primary">Đăng kí học</a>
+                    </div>
+                </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
