--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active fs-5" aria-current="page" href="/">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active fs-5" aria-current="page" href="/course/create">Post Course</a>
+        </li>
       </ul>
       <form method="POST" class="d-flex">
         <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
