--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -13,7 +13,9 @@
         {{> header}}
         
         <div id="body-app" style="margin: 0 20px;">
-            {{{body}}}
+            <div class="container">
+                {{{body}}}
+            </div>
         </div>
     </div>
 
