--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="#">NodeJs</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,11 +12,10 @@
         <li class="nav-item">
           <a class="nav-link active fs-5" aria-current="page" href="/course/create">Post Course</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active fs-5" aria-current="page" href="/me/manage/courses">My Courses</a>
+        </li>
       </ul>
-      <form method="POST" class="d-flex">
-        <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
